# py-swi-prolog

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pyproject.toml  setup.cfg  setup.py
src/swipl/: __init__.py
