[metadata]
name = swipl
description = SWI-Prolog is a comprehensive Prolog implementation
long_description = file: README.md
long_description_content_type = text/markdown
author = Jan Wielemaker
author_email = jan@swi-prolog.org
license = BSD-2-Clause
platforms = any
url = https://github.com/SWI-Prolog/swipl-devel

project_urls =
    Tracker = https://github.com/SWI-Prolog/idyntree/issues
    Documentation = https://www.swi-prolog.org/
    Source = https://github.com/SWI-Prolog/swipl-devel

keywords =
    Prolog
    logic

classifiers =
    Development Status :: 5 - Production/Stable
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Intended Audience :: Education
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Programming Language :: C
    Programming Language :: Prolog
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    License :: OSI Approved :: BSD License

[options]
zip_safe = False
python_requires = >=3.6
install_requires =
packages =
    swipl
package_dir =
    =src

[options.entry_points]
console_scripts =
    py-swipl = swipl:swipl
    py-swipl-ld = swipl:swipl_ld
